fix spacing press in main

--- a/css/layout/media.css
+++ b/css/layout/media.css
@@ -221,7 +221,7 @@
 	#feature h3{line-height: 1.4em;text-align: center;}
 	#tab-content p{font-size: 13px;line-height: 21px;}
 	#press-list img {width: 84px;}
-
+	#press div{padding:0;}
 }
 
 
